# CourseWorkRelise

./: CMakeLists.txt  CourseWorkRelise.sln  Makefile.txt
.github/workflows/: build.yml  c-cpp.yml  cmake.yml
CourseWorkRelise/: Audio.cpp  CourseWorkRelise.vcxproj  CourseWorkRelise.vcxproj.filters  Graphic.cpp  Graphic.h  PublicVar.h  logic.h  main.cpp
src/: CMakeLists.txt  cmake_install.cmake  main.cpp
src/audio/: CMakeLists.txt
src/game15_graph/: game15_graph.h
src/graphics/: CMakeLists.txt  Makefile  cmake_install.cmake
src/graphics/graphics/: graphics.cpp
src/logic/: CMakeLists.txt  Makefile  cmake_install.cmake
src/logic/logic/: logic.cpp  logic.h
src/public_variables/: public_variables.h
test/: CMakeList.txt  main.cpp  parser_test.cpp
Новая папка (2)/: CMakeLists.txt
Новая папка (2)/src/: Makefile
Новая папка (2)/src/audio/: Makefile  cmake_install.cmake
Новая папка (2)/src/audio/audio/: audio.cpp  audio.h
Новая папка (2)/src/public_variables/: CMakeLists.txt  Makefile  cmake_install.cmake
